[package]
name = "web-rdp-modoki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tokio = "1"
screenshots = "0.8.6"
futures = "0.3"
image = "0.24"
actix-files = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5.2"
rdev = "0.5.3"
